--- a/app/components/profile_card_component.html.haml
+++ b/app/components/profile_card_component.html.haml
@@ -1,14 +1,15 @@
 .flex.flex-1.flex-col
-  %img.mx-auto.h-32.w-32.flex-shrink-0.rounded-full{alt: "", src: @photo}
-  %h3.mt-6.text-sm.font-medium.text-shadowy-200
+  .mx-auto.h-32.w-32.flex-shrink-0.rounded-full.overflow-hidden.flex.items-center
+    %img.w-full.h-auto.align-middle{alt: "", src: @photo}
+  %h3.mt-6.text-md.font-medium.text-shadowy-200
     = @name.blank? ? 'Nombre no especificado' : @name
   %dl.mt-1.flex.flex-grow.flex-col.justify-between
     %dt.sr-only
       = @surname.blank? ? 'Apellidos no especificados' : @surname
-    %dd.text-sm.text-shadowy-200
+    %dd.text-md.text-shadowy-200
       = @surname.blank? ? 'Apellidos no especificados' : @surname
     %dt.sr-only
       = @agency.blank? ? 'Agencia no especificada' : @agency
     %dd.mt-3
-      %span.inline-flex.items-center.rounded-full.bg-green-50.px-2.py-1.text-xs.font-medium.text-green-700.ring-1.ring-inset{class: "ring-green-600/20"}
+      %span.inline-flex.items-center.rounded-full.bg-green-50.px-2.py-1.text-xs.font-medium.text-third.ring-1.ring-inset{class: "ring-primary"}
         = @agency.blank? ? 'Agencia no especificada' : @agency
