Unify styles and make some changes in some components to avoid errors in some casuistics.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -9,3 +9,5 @@
 @import './trix_customization.css';
 @import './castvault.css';
 @import 'actiontext.css';
+@import './buttons.css';
+@import './pagy.css';
