--- a/app/components/custom_checkbox_component.html.haml
+++ b/app/components/custom_checkbox_component.html.haml
@@ -17,3 +17,7 @@
   - if @model&.errors&.[](@key)&.present?
     .text-red-500.text-sm
       = @model.errors[@key].first
+  - else
+    - unless @info_message.blank?
+      %span.text-xs.text-shadowy-200.flex.justify-start
+        = render BootstrapIconWithTextComponent.new(icon: 'info-circle', extra_classes: 'text-xs', text: @info_message, text_extra_classes: 'text-xs', button_extra_classes: 'mt-2')
