--- a/app/views/manager/forms/_form.html.haml
+++ b/app/views/manager/forms/_form.html.haml
@@ -35,7 +35,7 @@
       %p.mt-1.text-sm.leading-6.text-gray-400.mb-4= t("forms_controller.section.#{section}_description")
       .grid.grid-cols-1.md:grid-cols-3.gap-4
         - fields.each do |column_name, _|
-          .p-4.cursor-pointer.bg-shadowy-700.text-white.rounded-xl{class: "hover:ring-1 hover:ring-primary #{@form.fields.dig(column_name.to_s, 'include') ? 'ring-1 ring-primary' : ''}", data: { action: "click->field-checkbox#toggleCheckbox", field_checkbox_target: "container" }}
+          .p-4.cursor-pointer.bg-shadowy-700.rounded-xl{class: "hover:ring-1 hover:ring-primary #{@form.fields.dig(column_name.to_s, 'include') ? 'ring-1 ring-primary' : ''}", data: { action: "click->field-checkbox#toggleCheckbox", field_checkbox_target: "container" }}
             .flex.items-center.justify-between.gap-3.text-sm.mb-2
               = check_box_tag "form[fields][#{column_name}][include]", "true", @form.fields.dig(column_name.to_s, 'include'), id: "#{column_name}_include", class: 'hidden', data: { field_checkbox_target: "checkbox", action: 'change->field-checkbox#updateSwitchVisual' }
               = label_tag '', t("fields.#{column_name}"), for: "#{column_name}-include", class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
@@ -48,7 +48,7 @@
                   %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {field_checkbox_target: 'span3'}}
                     %svg.h-3.w-3.text-shadowy-300{fill: "currentColor", viewbox: "0 0 12 12"}
                       %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
-            = render InputComponent.new(key: "form[fields][#{column_name}][label]", placeholder: 'Mensaje informativo adicional', model: @form, form: form)
+            = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: 'Mensaje informativo adicional', id: "form_fields_#{column_name}_label"
 
   .border-b.pb-4.mb-10{class: 'border-shadowy-200/10'}
     %h2.text-base.font-semibold.leading-7.text-shadowy-200.mt-6= t("forms_controller.section.skills")
@@ -68,7 +68,7 @@
                 %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {field_checkbox_target: 'span3'}}
                   %svg.h-3.w-3.text-shadowy-300{fill: "currentColor", viewbox: "0 0 12 12"}
                     %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
-          = render InputComponent.new(key: "form[fields][#{column_name}][label]", placeholder: 'Mensaje informativo adicional', model: @form, form: form)
+          = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: 'Mensaje informativo adicional', id: "form_fields_#{column_name}_label"
 
   .mt-4.text-center
     = form.submit submit_button_text, class: "inline-flex items-center bg-primary rounded-full px-4 py-3 text-md font-semibold text-dark transition duration-200 cursor-pointer hover:bg-dark hover:text-primary hover:ring-1 hover:ring-primary hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
