--- a/app/components/profile_component.html.haml
+++ b/app/components/profile_component.html.haml
@@ -10,6 +10,23 @@
               %p.text-sm.text-gray-500= @profile.city if @profile.city.present?
           .cursor-pointer.font-bold.text-white{ data: { action: "click->profiles-form#closeProfileModal" } }
             = render BootstrapIconWithTextComponent.new(icon: 'x', extra_classes: 'text-3xl pr-4')
+        - if @profile.face_photo.attached? || @profile.body_photo.attached? || @profile.video_book.attached?
+          .swiper-container{ data: { controller: "carousel", carousel_options_value: '{"navigation": {"nextEl": ".swiper-button-next", "prevEl": ".swiper-button-prev"}, "pagination": {"el": ".swiper-pagination", "clickable": true}}' }, class: "mx-auto", style: "height: 600px; width: auto;" }
+            .swiper-wrapper
+              - if @profile.face_photo.attached?
+                .swiper-slide.items-center.justify-center{style: 'display:flex!important;'}
+                  = image_tag @profile.face_photo, class: "max-h-full max-w-full object-contain"
+              - if @profile.body_photo.attached?
+                .swiper-slide.items-center.justify-center{style: 'display:flex!important;'}
+                  = image_tag @profile.body_photo, class: "max-h-full max-w-full object-contain"
+              - if @profile.video_book.attached?
+                .swiper-slide.items-center.justify-center{style: 'display:flex!important;'}
+                  = video_tag @profile.video_book, class: "max-h-full max-w-full object-contain", controls: true
+
+            %div.swiper-pagination{ 'aria-label': "Slide pagination" }
+            %div.swiper-button-next{ 'aria-label': "Next slide" }
+            %div.swiper-button-prev{ 'aria-label': "Previous slide" }
+
 
         %div.flex.flex-wrap.mb-4
           - if @profile.email.present?
@@ -69,14 +86,3 @@
             %p.text-sm.text-gray-600= "Birthdate: #{@profile.birthdate.strftime('%B %d, %Y')}"
             %p.text-sm.text-gray-600= "Gender: #{@profile.gender.humanize}"
             %p.text-sm.text-gray-600= "Ethnicity: #{@profile.ethnicity.humanize}"
-
-        -# Conditional rendering for attached photos and videos
-        - if @profile.body_photo.attached?
-          %div.mt-4
-            %h3.text-lg.font-semibold.Text-gray-800 Body Photo
-            = image_tag @profile.body_photo, class: "rounded-lg"
-
-        - if @profile.video_book.attached?
-          %div.mt-4
-            %h3.text-lg.font-semibold.Text-gray-800 Video Book
-            = video_tag @profile.video_book, controls: true, class: "rounded-lg w-full"
