Modal with gallery, add glightbox and global modal for all the web.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,4 +11,4 @@
 @import 'actiontext.css';
 @import './buttons.css';
 @import './pagy.css';
-@import 'swiper/swiper-bundle.css';
+@import 'glightbox/dist/css/glightbox.css';
