--- a/app/components/bootstrap_icon_with_text_component.html.haml
+++ b/app/components/bootstrap_icon_with_text_component.html.haml
@@ -1,11 +1,11 @@
 - if @icon_position == 'left'
-  .flex.justify-center.items-center{class: @button_extra_classes}
+  .flex.items-center{class: @button_extra_classes}
     %i{ class: "bi bi-#{@icon} #{@extra_classes}" }
     - unless @text.blank?
       %span.ml-2{class: @text_extra_classes}
         = @text
 - else
-  .flex.justify-center.items-center{class: @button_extra_classes}
+  .flex.items-center{class: @button_extra_classes}
     - unless @text.blank?
       %span.mr-2{class: @text_extra_classes}
         = @text
