--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,3 +17,4 @@
     = render FlashMessageComponent.new( message: flash.first.nil? ? nil : flash.first[1], type: flash.first.nil? ? nil : flash.first[0], delay: 10000 )
     = render SidebarComponent.new(current_user: current_user) do
       = yield
+    = turbo_frame_tag "modal"
