--- a/app/components/profile_card_component.html.haml
+++ b/app/components/profile_card_component.html.haml
@@ -1,4 +1,4 @@
-.flex.flex-1.flex-col
+.flex.flex-1.flex-col.text-center
   .mx-auto.h-32.w-32.flex-shrink-0.rounded-full.overflow-hidden.flex.items-center
     %img.w-full.h-auto.align-middle{alt: "", src: @photo}
   %h3.mt-6.text-md.font-medium.text-shadowy-200
