--- a/app/components/modal_component.html.haml
+++ b/app/components/modal_component.html.haml
@@ -1,8 +1,8 @@
 %turbo-frame#modal
   .modal-overlay{ data: {controller: 'modal', modal_target: "overlay" }, class: "z-50 fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center" }
     .modal-container{ data: { modal_target: "container" }, class: "fixed inset-0 overflow-y-auto flex items-start justify-center" }
-      .modal-content{ data: { modal_target: "content" }, class: "bg-dark w-full max-w-100 m-5 rounded-xl shadow-lg space-y-4 overflow-visible text-shadowy-200 relative" }
+      .modal-content{ data: { modal_target: "content" }, class: "bg-shadowy-700 w-full max-w-100 p-4 rounded-xl shadow-lg space-y-4 overflow-visible text-shadowy-200 relative" }
         .pr-4.absolute.top-4.right-4.cursor-pointer{ data: { action: "click->modal#closeModal" } }
           = render BootstrapIconWithTextComponent.new(icon: 'x', button_extra_classes: 'cursor-pointer')
-
-        = content
+        .pt-8
+          = content
