--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,10 @@
-%p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password. You can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+= render EmailCenteredTextComponent.new(font_size: '32px', line_height: 1, extra_styles: 'font-weight:bold;', text: t('reset_password_instructions.greeting', full_name: @resource.full_name))
+
+= render EmailCenteredTextComponent.new(text: t('reset_password_instructions.instruction'))
+
+= render EmailCenteredButtonComponent.new(text: t('reset_password_instructions.change_password_button'), url: edit_password_url(@resource, reset_password_token: @token))
+
+= render EmailCenteredTextComponent.new(text: t('reset_password_instructions.ignore_message'))
+
+= render EmailCenteredTextComponent.new(text: t('reset_password_instructions.password_change_confirmation'))
+
