--- a/app/views/manager/profiles/modal.html.haml
+++ b/app/views/manager/profiles/modal.html.haml
@@ -4,29 +4,38 @@
     .name-and-city
       %h2.text-2xl.font-semibold
         = [@profile.name, @profile.surname].compact.join(' ')
-      %p.text-sm.text-gray-500
-        = @profile.city if @profile.city.present?
-      .text-start
+      - if @profile.city.present?
+        %p.text-sm.text-gray-500
+          = @profile.city
+      - if @profile.email.present?
         = link_to "mailto:#{@profile.email}", class: "text-decoration-none" do
           = render BootstrapIconWithTextComponent.new(icon: 'envelope', text: @profile.email)
+      - if @profile.phone.present?
         = link_to "tel:#{@profile.phone}", class: "text-decoration-none" do
           = render BootstrapIconWithTextComponent.new(icon: 'telephone', text: @profile.phone)
+      - if @profile.web.present?
         = link_to @profile.web, class: "text-decoration-none", target: "_blank" do
           = render BootstrapIconWithTextComponent.new(icon: 'globe', text: @profile.web)
 
+    - if @profile.twitter.present? || @profile.facebook.present? || @profile.instagram.present? || @profile.tik_tok.present?
       .flex.items-center.gap-3
-        = link_to "https://twitter.com/#{@profile.twitter.delete_prefix('@')}", class: "text-blue-400 hover:text-blue-500" do
-          %i.bi.bi-twitter
-        = link_to "https://facebook.com/#{@profile.facebook}", class: "text-blue-600 hover:text-blue-700" do
-          %i.bi.bi-facebook
-        = link_to "https://instagram.com/#{@profile.instagram.delete_prefix('@')}", class: "text-pink-600 hover:text-pink-700" do
-          %i.bi.bi-instagram
-        = link_to "https://tiktok.com/@#{@profile.tik_tok.delete_prefix('@')}", class: "text-black hover:text-gray-900" do
-          %i.bi.bi-tiktok
+        - if @profile.twitter.present?
+          = link_to "https://twitter.com/#{@profile.twitter.delete_prefix('@')}", class: "text-blue-400 hover:text-blue-500" do
+            %i.bi.bi-twitter
+        - if @profile.facebook.present?
+          = link_to "https://facebook.com/#{@profile.facebook}", class: "text-blue-600 hover:text-blue-700" do
+            %i.bi.bi-facebook
+        - if @profile.instagram.present?
+          = link_to "https://instagram.com/#{@profile.instagram.delete_prefix('@')}", class: "text-pink-600 hover:text-pink-700" do
+            %i.bi.bi-instagram
+        - if @profile.tik_tok.present?
+          = link_to "https://tiktok.com/@#{@profile.tik_tok.delete_prefix('@')}", class: "text-black hover:text-gray-900" do
+            %i.bi.bi-tiktok
+
   - if @profile.face_photo.attached? || @profile.body_photo.attached? || @profile.video_book.attached?
     %section.mt-16{ data: { controller: "glightbox" } }
       %h2.text-2xl.font-semibold.text-center.mb-4
-        = 'Galería'
+        = t('profile_modal.galery')
       .flex.items-center.justify-center
         - if @profile.face_photo.attached?
           %a.glightbox{ href: url_for(@profile.face_photo) }
@@ -38,8 +47,50 @@
           %a.glightbox{ href: url_for(@profile.video_book), data: { type: 'video', source: 'local' } }
             = video_tag @profile.video_book, controls: true, class: "object-scale-down h-48 w-48 mx-auto"
 
+
+      - if @profile.agency
+        .mt-4
+          %h3.text-lg.font-semibold.Text-gray-800
+            = t('profile_modal.agency_information')
+          %p.text-sm.text-gray-600= @profile.agent_name if @profile.agent_name.present?
+          %p.text-sm.text-gray-600= @profile.agent_email if @profile.agent_email.present?
+          %p.text-sm.text-gray-600= @profile.agent_phone if @profile.agent_phone.present?
+
+      .mt-4
+        %h3.text-lg.font-semibold.Text-gray-800
+          = t('profile_modal.personal_details')
+
+        - if @profile.birthdate.present?
+          %p.text-sm.text-gray-600= "Birthdate: #{@profile.birthdate.strftime('%B %d, %Y')}"
+        - if @profile.gender.present?
+          %p.text-sm.text-gray-600= "Gender: #{@profile.gender}"
+        - if @profile.ethnicity.present?
+          %p.text-sm.text-gray-600= "Ethnicity: #{@profile.ethnicity}"
+        - if @profile.height.present?
+          %p.text-sm.text-gray-600= "Height: #{@profile.height} cm"
+        - if @profile.shirt_size.present?
+          %p.text-sm.text-gray-600= "Shirt Size: #{@profile.shirt_size}"
+        - if @profile.pants_size.present?
+          %p.text-sm.text-gray-600= "Pants Size: #{@profile.pants_size}"
+        - if @profile.shoe_size.present?
+          %p.text-sm.text-gray-600= "Shoe Size: #{@profile.shoe_size}"
+        - if @profile.hair_type.present?
+          %p.text-sm.text-gray-600= "Hair Type: #{@profile.hair_type}"
+        - if @profile.hair_color.present?
+          %p.text-sm.text-gray-600= "Hair Color: #{@profile.hair_color}"
+        - if @profile.eye_color.present?
+          %p.text-sm.text-gray-600= "Eye Color: #{@profile.eye_color}"
+        - if @profile.passport
+          %p.text-sm.text-gray-600 Passport: Yes
+        - if @profile.driving_license
+          %p.text-sm.text-gray-600 Driving License: Yes
+        - if @profile.food_allergies.present?
+          %p.text-sm.text-gray-600= "Food Allergies: #{@profile.food_allergies}"
+
+
     .mt-6
-      %h3.text-lg.font-semibold.Text-gray-800 Skills & Interests
+      %h3.text-lg.font-semibold.Text-gray-800
+        = 'Skills & Interests'
       %ul.flex.flex-wrap.mt-2
         - Form::FEATURES_OPTIONS.each do |category, skills|
           - skills_selected = @profile.send(category)
@@ -49,19 +100,3 @@
               %ul.pl-4
                 - skills_selected.each do |skill|
                   %li.text-sm.text-gray-600= skill
-
-      .mt-4
-        %h3.text-lg.font-semibold.Text-gray-800 Agency Information
-        %p.text-sm.text-gray-600= @profile.agent_name
-        - if @profile.agent_email.present?
-          %p.text-sm.text-gray-600= @profile.agent_email
-        - if @profile.agent_phone.present?
-          %p.text-sm.text-gray-600= @profile.agent_phone
-
-      .mt-4
-        %h3.text-lg.font-semibold.Text-gray-800 Personal Details
-        %p.text-sm.text-gray-600= "Birthdate: #{@profile.birthdate.strftime('%B %d, %Y')}"
-        %p.text-sm.text-gray-600= "Gender: #{@profile.gender.humanize}"
-        %p.text-sm.text-gray-600= "Ethnicity: #{@profile.ethnicity.humanize}"
-
-
