--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -5,3 +5,12 @@
 .btn-secondary {
     @apply inline-flex items-center rounded-3xl ring-1 ring-primary bg-dark px-4 py-3 text-base font-medium text-primary transition duration-200 cursor-pointer hover:bg-primary hover:text-dark hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-600;
 }
+
+.btn-terciary {
+    @apply inline-flex items-center rounded-3xl ring-1 ring-primary bg-transparent px-4 py-3 text-base font-medium text-primary transition duration-200 cursor-pointer hover:bg-primary hover:text-dark hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-600;
+}
+
+
+.btn-primary-no-hover {
+    @apply inline-flex items-center bg-primary rounded-full px-4 py-3 text-base font-semibold text-dark transition duration-200 cursor-pointer focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary;
+}
