--- a/app/components/input_component.html.haml
+++ b/app/components/input_component.html.haml
@@ -1,7 +1,8 @@
 .form-group
   - if @label
     = @form.label @key, @label, class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200', id: "label_profile_#{@key}"
-  = @form.public_send(@type, @key, class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: @placeholder)
+  - form_value = params[@key] || (@form.object.present? ? @form.object.send(@key) : nil)
+  = @form.public_send(@type, @key, value: form_value, class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: @placeholder)
   - if @model&.errors&.[](@key)&.present?
     .text-red-500.text-sm
       = @model.errors[@key].first
