--- a/app/views/devise/mailer/password_change.html.haml
+++ b/app/views/devise/mailer/password_change.html.haml
@@ -1,3 +1,3 @@
-%p
-  Hello #{@resource.email}!
-%p We're contacting you to notify you that your password has been changed.
+= render EmailCenteredTextComponent.new(font_size: '32px', line_height: 1, extra_styles: 'font-weight:bold;', text: t('email_changed.greeting', full_name: @resource.full_name))
+
+= render EmailCenteredTextComponent.new(text: t('password_change.instruction'))
