--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,8 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", type: "module"
+
+    = render 'shared/favicon'
   %body.h-full{ data: { locale: I18n.locale } }
     = render FlashMessageComponent.new( message: flash.first.nil? ? nil : flash.first[1], type: flash.first.nil? ? nil : flash.first[0], delay: 10000 )
     = render SidebarComponent.new(current_user: current_user) do
