--- a/app/views/layouts/web.html.haml
+++ b/app/views/layouts/web.html.haml
@@ -8,6 +8,8 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", type: "module"
+
+    = render 'shared/favicon'
   %body.h-full
     = render FlashMessageComponent.new( message: flash.first.nil? ? nil : flash.first[1], type: flash.first.nil? ? nil : flash.first[0], delay: 10000 )
     = render NavbarComponent.new()
