--- a/app/views/manager/forms/_form.html.haml
+++ b/app/views/manager/forms/_form.html.haml
@@ -2,7 +2,7 @@
   = render HeaderComponent.new(title: @title, description: @description, buttons: @header_buttons)
   .mb-4.mt-10
     .mb-4.w-80
-      = render InputComponent.new(key: :name, label: 'Nombre del formulario', placeholder: 'Introduce el nombre del formulario', model: @form, form: form)
+      = render InputComponent.new(key: :name, label: t('forms_controller.form_name_label'), placeholder: t('forms_controller.form_name_placeholder'), model: @form, form: form)
     .mb-4.flex.justify-start
       = render UploadFileComponent.new( form: form,
                                         model: :form,
@@ -12,23 +12,14 @@
                                         accepted_types: %w[png jpg jpeg heic],
                                         max_size_mb: 5 )
 
-    = form.label :description, 'Descripción', class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
+    = form.label :description, t('forms_controller.description_label'), class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
     = form.rich_text_area :description, class: 'message-text-area-html mt-4', data: { scheduled_messages_target: 'textHtmlSelector' }
 
 
   .flex.items-center.mb-6.mt-10{data: { action: "click->field-checkbox#toggleCheckbox" } }
     = check_box_tag 'select_all', '1', false, class: 'hidden', data: { field_checkbox_target: "checkboxSelectAll" }
-
-    %button.bg-gray-200.relative.inline-flex.h-6.w-11.flex-shrink-0.cursor-pointer.rounded-full.border-2.border-transparent.transition-colors.duration-200.ease-in-out.focus:outline-none.focus:ring-2.focus:ring-shadowy-300.focus:ring-offset-2{'aria-checked': "false", role: "switch", type: "button", data: {field_checkbox_target: 'buttonSelectAll', action: 'click->field-checkbox#selectAllToggle'} }
-      %span.sr-only Use setting
-      %span.translate-x-0.pointer-events-none.relative.inline-block.h-5.w-5.transform.rounded-full.bg-white.shadow.ring-0.transition.duration-200.ease-in-out{data: {field_checkbox_target: 'span1SelectAll'}}
-        %span.opacity-100.duration-200.ease-in.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': 'true', data: {field_checkbox_target: 'span2SelectAll'}}
-          %svg.h-3.w-3.text-gray-400{fill: "none", viewbox: "0 0 12 12"}
-            %path{d: "M4 8l2-2m0 0l2-2M6 6L4 4m2 2l2 2", stroke: "currentColor", 'stroke-linecap': "round", 'stroke-linejoin': "round", 'stroke-width': '2'}
-        %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {field_checkbox_target: 'span3SelectAll'}}
-          %svg.h-3.w-3.text-shadowy-300{fill: "currentColor", viewbox: "0 0 12 12"}
-            %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
-    = label_tag 'select_all', 'Seleccionar todos', class: 'ml-2 block text-xl text-shadowy-200'
+    = render partial: 'shared/toggle_button', locals: {button_data: {field_checkbox_target: 'buttonSelectAll', action: 'click->field-checkbox#selectAllToggle'}, span_1_data: {field_checkbox_target: 'span1SelectAll'}, span_2_data: {field_checkbox_target: 'span2SelectAll'}, span_3_data: {field_checkbox_target: 'span3SelectAll'}}
+    = label_tag 'select_all', t('forms_controller.select_all_label'), class: 'ml-2 block text-xl text-shadowy-200'
   - Form::ADMITED_FORM_FIELDS.group_by { |_, field_attrs| field_attrs[:section] }.each do |section, fields|
     .border-b.pb-4.mb-10{class: 'border-shadowy-200/10'}
       %h2.text-base.font-semibold.leading-7.text-shadowy-200.mt-6= t("forms_controller.section.#{section}")
@@ -39,16 +30,8 @@
             .flex.items-center.justify-between.gap-3.text-sm.mb-2
               = check_box_tag "form[fields][#{column_name}][include]", "true", @form.fields.dig(column_name.to_s, 'include'), id: "#{column_name}_include", class: 'hidden', data: { field_checkbox_target: "checkbox", action: 'change->field-checkbox#updateSwitchVisual' }
               = label_tag '', t("fields.#{column_name}"), for: "#{column_name}-include", class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
-              %button.bg-gray-200.relative.inline-flex.h-6.w-11.flex-shrink-0.cursor-pointer.rounded-full.border-2.border-transparent.transition-colors.duration-200.ease-in-out.focus:outline-none.focus:ring-2.focus:ring-0{'aria-checked': "false", role: "switch", type: "button", data: {field_checkbox_target: 'button'} }
-                %span.sr-only= "Use setting"
-                %span.translate-x-0.pointer-events-none.relative.inline-block.h-5.w-5.transform.rounded-full.bg-white.shadow.ring-0.transition.duration-200.ease-in-out{data: {field_checkbox_target: 'span1'}}
-                  %span.opacity-100.duration-200.ease-in.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': 'true', data: {field_checkbox_target: 'span2'}}
-                    %svg.h-3.w-3.text-gray-400{fill: "none", viewbox: "0 0 12 12"}
-                      %path{d: "M4 8l2-2m0 0l2-2M6 6L4 4m2 2l2 2", stroke: "currentColor", 'stroke-linecap': "round", 'stroke-linejoin': "round", 'stroke-width': '2'}
-                  %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {field_checkbox_target: 'span3'}}
-                    %svg.h-3.w-3.text-shadowy-300{fill: "currentColor", viewbox: "0 0 12 12"}
-                      %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
-            = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: 'Mensaje informativo adicional', id: "form_fields_#{column_name}_label"
+              = render partial: 'shared/toggle_button', locals: {button_data: {field_checkbox_target: 'button'}, span_1_data: {field_checkbox_target: 'span1'}, span_2_data: {field_checkbox_target: 'span2'}, span_3_data: {field_checkbox_target: 'span3'}}
+            = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: t('forms_controller.additional_info_placeholder'), id: "form_fields_#{column_name}_label"
 
   .border-b.pb-4.mb-10{class: 'border-shadowy-200/10'}
     %h2.text-base.font-semibold.leading-7.text-shadowy-200.mt-6= t("forms_controller.section.skills")
@@ -59,17 +42,9 @@
           .flex.items-center.justify-between.gap-3.text-sm.mb-2
             = check_box_tag "form[fields][#{column_name}][include]", "true", @form.fields.dig(column_name.to_s, 'include'), id: "#{column_name}_include", class: 'hidden', data: { field_checkbox_target: "checkbox", action: 'change->field-checkbox#updateSwitchVisual' }
             = label_tag '', t("fields.#{column_name}"), for: "#{column_name}-include", class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
-            %button.bg-gray-200.relative.inline-flex.h-6.w-11.flex-shrink-0.cursor-pointer.rounded-full.border-2.border-transparent.transition-colors.duration-200.ease-in-out.focus:outline-none.focus:ring-2.focus:ring-0{'aria-checked': "false", role: "switch", type: "button", data: {field_checkbox_target: 'button'} }
-              %span.sr-only= "Use setting"
-              %span.translate-x-0.pointer-events-none.relative.inline-block.h-5.w-5.transform.rounded-full.bg-white.shadow.ring-0.transition.duration-200.ease-in-out{data: {field_checkbox_target: 'span1'}}
-                %span.opacity-100.duration-200.ease-in.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': 'true', data: {field_checkbox_target: 'span2'}}
-                  %svg.h-3.w-3.text-gray-400{fill: "none", viewbox: "0 0 12 12"}
-                    %path{d: "M4 8l2-2m0 0l2-2M6 6L4 4m2 2l2 2", stroke: "currentColor", 'stroke-linecap': "round", 'stroke-linejoin': "round", 'stroke-width': '2'}
-                %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {field_checkbox_target: 'span3'}}
-                  %svg.h-3.w-3.text-shadowy-300{fill: "currentColor", viewbox: "0 0 12 12"}
-                    %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
-          = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: 'Mensaje informativo adicional', id: "form_fields_#{column_name}_label"
+            = render partial: 'shared/toggle_button', locals: {button_data: {field_checkbox_target: 'button'}, span_1_data: {field_checkbox_target: 'span1'}, span_2_data: {field_checkbox_target: 'span2'}, span_3_data: {field_checkbox_target: 'span3'}}
+          = text_field_tag "form[fields][#{column_name}][label]", @form['fields'].dig(column_name.to_s, "label"), class: 'mt-1 w-full block rounded-full border-gray-300 p-3.5 focus:border-primary focus:ring-primary sm:text-sm', placeholder: t('forms_controller.additional_info_placeholder'), id: "form_fields_#{column_name}_label"
 
   .mt-4.text-center
-    = form.submit submit_button_text, class: "inline-flex items-center bg-primary rounded-full px-4 py-3 text-md font-semibold text-dark transition duration-200 cursor-pointer hover:bg-dark hover:text-primary hover:ring-1 hover:ring-primary hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
+    = form.submit submit_button_text, class: "btn-primary"
 
