--- a/app/views/manager/forms/show.html.haml
+++ b/app/views/manager/forms/show.html.haml
@@ -12,8 +12,10 @@
   = form.hidden_field :form_id, value: @form.id
   - @filtered_admited_form_fields.group_by { |_, field_attrs| field_attrs[:section] }.each do |section, fields|
     .border-b.pb-12{class: 'border-shadowy-200/10'}
-      %h2.text-base.font-semibold.leading-7.text-shadowy-200= t("forms_controller.section.#{section}")
-      %p.mt-1.text-sm.leading-6.text-gray-400= t("forms_controller.section.#{section}_description")
+      %h2.text-base.font-semibold.leading-7.text-shadowy-200
+        = t("forms_controller.section.#{section}")
+      %p.mt-1.text-sm.leading-6.text-gray-400
+        = t("forms_controller.section.#{section}_description")
 
       .mt-10.grid.grid-cols-1.gap-x-6.gap-y-8.sm:grid-cols-6
         - fields.each do |field_name, field_attrs|
@@ -31,7 +33,7 @@
             - when 'multiselect'
               .mt-2.text-sm.text-shadowy-200
                 %select{multiple: true, name: "profile[#{field_name}][]", id: "profile_#{field_name}", data: {controller: 'slim-multiple', placeholder: t("forms_controller.multiselect_texts.placeholder_#{field_name}")}, class: "multiselect-#{field_name}"}
-                  %optgroup{data: {selectall: "true", selectalltext: "Seleccionar todos"}}
+                  %optgroup{data: {selectall: "true", selectalltext: t('forms_controller.select_all_label')}}
                     - Form.const_get("#{field_name.upcase}_OPTIONS").each do |value|
                       %option{value: value, selected: @profile.send(field_name).include?(value)}= t("forms_controller.multiselect_texts.#{field_name}.#{value}")
 
@@ -54,8 +56,10 @@
                                                 max_size_mb: 5,
                                                 extra_actions: ['autosave#save'] )
   .border-b.pb-12{class: 'border-shadowy-200/10'}
-    %h2.text-base.font-semibold.leading-7.text-shadowy-200= t("forms_controller.section.skills")
-    %p.mt-1.text-sm.leading-6.text-gray-400= t("forms_controller.section.skills_description")
+    %h2.text-base.font-semibold.leading-7.text-shadowy-200
+      = t("forms_controller.section.skills")
+    %p.mt-1.text-sm.leading-6.text-gray-400
+      = t("forms_controller.section.skills_description")
 
     .mt-10.grid.grid-cols-1.gap-x-6.gap-y-8.sm:grid-cols-6
       - @filtered_featured_options.each do |key, options|
@@ -63,7 +67,7 @@
           = form.label key, t("fields.#{key}"), class: "block text-sm font-medium leading-6 text-shadowy-200"
           .mt-2.text-sm.text-shadowy-200
             %select{multiple: true, name: "profile[#{key}][]", id: "profile_#{key}", data: {controller: 'slim-multiple', placeholder: t("forms_controller.multiselect_texts.placeholder_#{key}")}, class: "multiselect-#{key}"}
-              %optgroup{data: {selectall: "true", selectalltext: "Seleccionar todos"}}
+              %optgroup{data: {selectall: "true", selectalltext: t('forms_controller.select_all_label')}}
                 - options.each do |value|
                   %option{value: value, selected: @profile.send(key).include?(value)}
                     = t("forms_controller.multiselect_texts.#{key}.#{value}")
